# fpl-cheat

./: .gitignore  .vercelignore  Dockerfile  Makefile  README.md  app.py  creator_team_info.json  database.py  docker-compose.yml  fetch_fpl_data.py  fpl_api.py  index.html  manage.py  players_cache.py  pyproject.toml  railway.toml  requirements.txt  update_creator_teams.py  vercel.json
.cursor/rules/: project-context.mdc
api/: index.py
app/: __init__.py  cache.py  comparison.py  components.py  database.py  fpl_api.py  rendering.py  scheduler.py  styles.py  update_creator_teams.py
backend/: Dockerfile  admin.py  apps.py  manage.py  models.py  pyproject.toml  settings.py  urls.py  views.py  wsgi.py
backend/fpl_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/migrations/: 0001_initial.py
data/: players.csv
deploy/: README.md  deploy.sh  docker-compose.yml  local_setup.py  project-context.txt  setup.sh
frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt  vercel.json
scripts/: fetch_fpl_data.py  players_cache.py  update_creator_teams_cron.py
supabase/: schema.sql
tickets/: build_interface.md  fetch_data.md
