[project]
name = "fpl-backend"
version = "0.1.0"
description = "Django API for FPL Cheat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0",
  "gunicorn>=21.2",
  "dj-database-url>=2.2",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "requests>=2.32",
]

[tool.uv]
dev-dependencies = []

